Fix scrollbars for firefox

--- a/src/components/projecteditor/panes/style.less
+++ b/src/components/projecteditor/panes/style.less
@@ -28,12 +28,13 @@
         -ms-user-select: none;
         user-select: none;
         background-color: #252525;
-        min-height: 35px;
+        min-height: 30px;
         width: 100%;
         overflow-y: hidden;
         overflow-x: auto;
         display: flex;
         border-bottom: 1px solid #121516;
+        scrollbar-width: thin;
         .tab {
             background-color: #2D2D2D;
             cursor: pointer;
